# trybe-exercicios

./: .markdownlint.json  README.md
back-end/secao-01-docker-utilizando-containers/dia-03-orquestrando-containers-com-docker/: .gitignore
back-end/secao-03-introducao-ao-desenvolvimento-web-com-node/dia-03-nodejs-testes-de-integracao/: .eslintrc.json
back-end/secao-07-introducao-a-typescript/dia-01-aprendendo-typescript/: package-lock.json  package.json
back-end/secao-07-introducao-a-typescript/dia-02-introducao-a-generics/: package-lock.json  package.json  playground.ts
back-end/secao-08-programacao-orientada-a-objetos-poo-solid/dia-01-introducao-a-orientacao-a-objetos/: emai.calss.ts  package-lock.json  package.json  person.class.ts  playground.ts  television.class.ts
back-end/secao-08-programacao-orientada-a-objetos-poo-solid/dia-02-heranca-e-composicao/: aggregation.aggregation.ts  animal.class.ts  composition.composition.ts.ts  interfaceExemple.class.ts  logger.interface.ts  myInterface.interface.ts  package-lock.json  package.json  playgournd.ts  (+1 more)
ciencias-da-computacao/secacao-03-estrutura-de-dados-I-listas-lineares/dia-01-arrays/: array_example.py  multidimensional_array_example.py  pyproject.toml
ciencias-da-computacao/secacao-03-estrutura-de-dados-I-listas-lineares/dia-01-arrays/exercise/: exercise_01.py  exercise_02.py  exercise_03.py  exercise_04.py  exercise_05.py
front-end/: README.md
fundamentos/: README.md
fundamentos/secao-01-unix-shell-e-git/: README.md
fundamentos/secao-06-introducao-a-javascript-es6-e-testes-unitarios/: .gitignore
(+1157 files in other folders)
