[tool.poetry]
name = "dia-01-arrays"
version = "0.1.0"
description = "My exercise repo"
authors = ["mairess <trabalho.maires@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
